--- a/webIps/ClientApp/src/app/pulsacion/persona-registro/persona-registro.component.html
+++ b/webIps/ClientApp/src/app/pulsacion/persona-registro/persona-registro.component.html
@@ -1,11 +1,34 @@
 <div class="row">
     <div class="col-md-12">
-        <h1>Registrar persona</h1>
-        <p>persona-registro works!</p>
+        <h1>Registrar paciente</h1>
+        <p>paciente-registro works!</p>
     </div>
     <div class="col-md-12">
         <div class="card card-user">
             <div class="card-body">
+                <form >                 
+                    <div class="form-group">
+                        <label>Identificacion</label>
+                        <input type="text"  name="identificacion"  [(ngModel)]="paciente.identificacion" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text"  name="nombre"  [(ngModel)]="paciente.nombre" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Valor del servicio</label>
+                        <input type="number"  name="valorServicio"  [(ngModel)]="paciente.valorServicio" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Salario</label>
+                        <input type="number"  name="salario"  [(ngModel)]="paciente.salario" class="form-control" />
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn.primary mr-1" (click)="add()">Registrar</button>
+                        <button class="btn btn-secondary" type="reset">Cancelar</button>
+                    </div>
+                </form>
+                <!--
                 <form >
                     <div class="row">
                         <div class="col-md-6 pr-1">
@@ -53,7 +76,7 @@
                             <button type="reset" class="btn btn-outline-secondary">Cancelar</button>                            
                         </div>
                       </div>
-                </form> 
+                </form> -->
             </div>
         </div>
                    
